service-loadBalancer-networking/ingress/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: default
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web 
    spec:
      containers:
      - name: nginx
        image: nginx:latest
---
apiVersion: v1
kind: Service
metadata:
  name: web
spec:
  type: ClusterIP
  selector: 
    app: web
  ports:
  - port: 80
    targetPort: 80
