service-loadBalancer-networking/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-web
spec:
  ingressClassName: nginx

  rules:
    - host: web.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: web
                port:
                  number: 80
    - host: hello.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend: 
              service:
                name: hello
                port:
                  number: 8080
