service-loadBalancer-networking/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: cilium

  rules:
    - host: example.com
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend: 
              service:
                name: hello-svc
                port:
                  number: 80
          - path: /web
            pathType: Prefix
            backend:
              service:
                name: web-svc
                port:
                  number: 80
